# inflight

./: README.md  pyproject.toml
inflight_agentics/: .env.example  Dockerfile  README.md  deploy.sh  docker-compose.yml  get_openai_key.sh  pyproject.toml  run_consumer.py  run_producer.py  setup.sh  test_agentic.py  test_code_fixer.py  test_realtime.py  test_trading_agent.py
inflight_agentics/inflight_agentics/: __init__.py  agentic_logic.py  kafka_consumer.py  kafka_producer.py  openai_realtime_integration.py
inflight_agentics/inflight_agentics/config/: __init__.py  settings.py
inflight_agentics/tests/: test_agentic_logic.py  test_kafka_consumer.py  test_kafka_producer.py  test_openai_integration.py
specifications/: README.md  deno-typescript-spec.md
ui/: .env.example  Dockerfile  README.md  deno.json  docker-compose.yml  import_map.json  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
ui/scripts/: dev.sh
ui/src/: deps.ts  main.ts  types.d.ts
ui/src/agentic/: controller.ts
ui/src/openai/: realtime_client.ts
ui/src/queue/: consumer.ts  producer.ts
ui/test_backup/: consumer.test.ts  controller.test.ts  producer.test.ts  realtime_client.test.ts
